--- a/client/src/CSS/scss_partials/home/account/_accountModal.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountModal.scss
@@ -166,6 +166,7 @@
 
 	.category-container__border-container__content-container__label {
 		float: left;
+		margin-right: 10px;
 		// Subtracting 2px for better alignment
 		height: v.$account-modal-settings-content-container-height - 2;
 		font-size: v.$base-font-size;
