--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
@@ -254,7 +254,7 @@
 		background: none;
 		height: 29px;
 		width: v.$options-button-width;
-		color: v.$darker-icon-button-gray;
+		color: v.$mode-base-icon-button-text-color-light;
 		font-size: 28px;
 		text-align: center;
 		cursor: pointer;
