--- a/client/src/CSS/scss_partials/home/account/_accountSidebarChangeAppearance.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebarChangeAppearance.scss
@@ -4,139 +4,53 @@
 .account-sidebar-change-theme-component {
 	.content-container {
 		display: inline-block;
+		// Bottom margin needed so backend-errors can be positioned half way
+		// ...between content and the dividing line
 		margin: 0 0 v.$account-sidebar-dividing-line-margin-top-bottom-half v.$account-sidebar-appearance-contents-container-margin-left-right;
-		height: v.$basic-toggle-switch-height;
 	}
 
 	.content-container--right {
 		float: right;
+		// Bottom margin needed so backend-errors can be positioned half way
+		// ...between content and the dividing line
 		margin: 0 v.$account-sidebar-appearance-contents-container-margin-left-right v.$account-sidebar-dividing-line-margin-top-bottom-half 0;
 	}
 
 	.content-container__label {
-		float: left;
-		height: v.$account-sidebar-appearance-theme-button-selected-arrow-container-height;
+		display: block;
+		margin-bottom: 6px;
 		font-size: v.$account-sidebar-appearance-label-font-size;
-		line-height: v.$account-sidebar-appearance-theme-button-selected-arrow-container-height;
-		vertical-align: middle;
 	}
 
-	.content-container__theme-button {
+	.content-container__theme-option {
 		// Must be border-box because the zoom on the webpage can resize the border otherwise
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 
-		position: relative;
-		float: left;
-		margin-left: 10px;
-		width: v.$account-sidebar-appearance-theme-button-width;
-		color: v.$mode-account-sidebar-theme-button-text-color-light; 
-		cursor: pointer;
-	}
-
-	.content-container__theme-button__current-container {
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
-		position: relative;
-		float: left;
-		border: solid v.$mode-account-sidebar-theme-button-border-color-light v.$account-sidebar-appearance-theme-button-border-width;
-		border-right: none;
-		background-color: v.$mode-account-sidebar-theme-button-current-container-background-color-light;
-		height: v.$account-sidebar-appearance-theme-button-selected-arrow-container-height;
-		width: v.$account-sidebar-appearance-theme-button-selected-container-width;
-	}
-
-	.content-container__theme-button__option {
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
-		position: relative;
-		height: v.$account-sidebar-appearance-theme-button-option-height;
-		width: v.$account-sidebar-appearance-theme-button-option-width;
-	}
-
-	.content-container__theme-button__option--larger {
-		height: v.$account-sidebar-appearance-theme-button-option-height + 10;
-		width: v.$account-sidebar-appearance-theme-button-option-larger-width;
-	}
-
-	.content-container__theme-button__option--selected {
-		background-color: v.$mode-account-sidebar-theme-button-option-selected-background-color-light;
-	}
-
-	.content-container__theme-button__option__centering-container {
 		position: relative;
 		display: inline-block;
-		margin-left: 5px;
-		height: 100%;
-		width: 15px;
-	}
-
-	.content-container__theme-button__option__centering-container__circle {
-		@include m.vertical-center();
-
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
-		border-radius: 100px;
+		margin-right: 6px;
+		border-radius: 10px;
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to a the circle.
 		// ...the scss for the colors assigned are in app.scss
 		background-color: black;
-		height: 14px;
-		width: 14px;
+		height: 30px;
+		width: 30px;
+		cursor: pointer;
 	}
 
-	.content-container__theme-button__option__centering-container__text {
-		@include m.vertical-center();
-		@include m.stop-text-selection();
-
-		font-size: 12px;
-		font-weight: bold;
-		
-	}
-
-	.content-container__theme-button__arrow-container {
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
-		position: relative;
-		float: left;
-		border: solid v.$mode-account-sidebar-theme-button-border-color-light v.$account-sidebar-appearance-theme-button-border-width;
-		background-color: v.$mode-account-sidebar-theme-button-arrow-container-background-color-light;
-		height: v.$account-sidebar-appearance-theme-button-selected-arrow-container-height;
-		width: v.$account-sidebar-appearance-theme-button-arrow-container-width;
-		color: v.$mode-account-sidebar-theme-button-arrow-container-text-color-light;
-	}
-
-	.content-container__theme-button__arrow-container__icon {
+	.content-container__theme-option__selected-checkmark {
 		@include m.dead-center();
 		@include m.stop-text-selection();
+
+		color: white;
 	}
 
-	.content-container__theme-button__dropdown-container {
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
-		z-index: 1;
-		position: absolute;
-		top: v.$account-sidebar-appearance-theme-button-dropdown-container-top;
-		border: solid v.$mode-account-sidebar-theme-button-border-color-light v.$account-sidebar-appearance-theme-button-border-width;
-		border-top: none;
-		background-color: v.$mode-account-sidebar-theme-button-dropdown-container-background-color-light;
-		width: v.$account-sidebar-appearance-theme-button-width;
+	.content-container__toggle-switch-centering-container {
+		width: v.$basic-toggle-switch-width;
+		margin: 0 auto;
 	}
 
 	.backend-errors {
